--- a/docassemble/lmrhh/data/questions/deutschland-singt.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt.yml
@@ -75,7 +75,7 @@ data:
 # Wert von template sollte nicht verändert werden.
 template: person_email
 # Der E-Mail-Betreff
-subject: Ihre Anmeldung zur Fachtagung Musik und Demenz
+subject: Ihre Anmeldung zum Projektchor Deutschland singt
 # Diese Datei enthält den Mailinhalt (die Datei befindet sich im `templates`
 # Ordner).
 content file: Deutschland Singt E-Mail.md
@@ -84,7 +84,7 @@ content file: Deutschland Singt E-Mail.md
 # versendet wird. Der Wert von template sollte nicht verändert werden.
 template: orga_email
 # Der E-Mail-Betreff
-subject: ${ person.name } hat sich für Deutschland singt
+subject: ${ person.name } hat sich für Deutschland singt angemeldet
 # Diese Datei enthält den Mailinhalt (die Datei befindet sich im `templates`
 # Ordner).
 content file: Deutschland Singt Benachrichtigung.md
