--- a/docassemble/lmrhh/data/questions/deutschland-singt-tasks.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt-tasks.yml
@@ -19,7 +19,8 @@ code: |
     "Adresse": adresse(person),
     "Anmeldedatum": current_datetime(timezone="Europe/Berlin").format_datetime('d.M.YYYY HH:mm'),
     "Probentermine": ', '.join(probentermine.true_values()),
-    "Anmerkungen": anmerkungen
+    "Anmerkungen": anmerkungen,
+    "Stimmlage": stimmlage
   }
 ---
 # A task that adds a row to the Anmeldungen.
