--- a/docassemble/lmrhh/data/questions/deutschland-singt-fragen.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt-fragen.yml
@@ -142,10 +142,7 @@ prevent going back: True
 question: Ihre Anmeldung
 subquestion: |
   Ihre Anmeldung wurde erfolgreich abgeschickt. Sie erhalten eine Bestätigung
-  per E-Mail.
-
-  Sie können sich auf der folgenden Seite direkt die Noten herunterladen:
-  <a class ="btn btn-default" href="#">Noten herunterladen</a>
+  per E-Mail. Das Notenmaterial liegt in den Proben kostenlos vor Ort aus.
 
   Klicken Sie auf "Fertig", um die Anmeldung zu beenden.
 buttons:
