--- a/docassemble/lmrhh/data/questions/deutschland-singt-fragen.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt-fragen.yml
@@ -68,9 +68,11 @@ subquestion: |
   wissen, an welchen Probenterminen Sie anwesend sein werden. Die Angaben, die
   hier gemacht werden, sind **verbindlich**.
 
-  **Achtung**: Aufgrund der hohen Nachfrage wurden weitere Probentermine
-  angesetzt. Sie können sich nicht mehr zu Probenterminen anmelden, die bereits
-  voll ausgelastet sind.
+  <div class="alert alert-warning" role="alert">
+    <b>Achtung</b>: Aufgrund der hohen Nachfrage wurden weitere Probentermine
+    angesetzt. Sie können sich nicht mehr zu Probenterminen anmelden, die bereits
+    voll ausgelastet sind.
+  </div>
 fields:
   - Ich bin an den folgenden Probenterminen anwesend: probentermine
     datatype: checkboxes
