--- a/docassemble/lmrhh/data/questions/mud.yml
+++ b/docassemble/lmrhh/data/questions/mud.yml
@@ -120,6 +120,7 @@ sections:
 # Funktion, die nicht leichtfertig verändert werden sollte.
 mandatory: True
 code: |
+  Anmeldefrist
   Kontaktdaten
   Optionen
   if testmodus and url_args.get('rn', None) == 'manual':
