--- a/docassemble/lmrhh/data/questions/deutschland-singt-tasks.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt-tasks.yml
@@ -20,7 +20,8 @@ code: |
     "Anmeldedatum": current_datetime(timezone="Europe/Berlin").format_datetime('d.M.YYYY HH:mm'),
     "Probentermine": ', '.join(probentermine.true_values()),
     "Anmerkungen": anmerkungen,
-    "Stimmlage": stimmlage
+    "Stimmlage": stimmlage,
+    "Warteliste": true
   }
 ---
 # A task that adds a row to the Anmeldungen.
