--- a/docassemble/lmrhh/data/questions/deutschland-singt.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt.yml
@@ -73,11 +73,11 @@ data:
     - date: 2021-09-19
       id: "2021-09-19-2"
       help: 14:00 Uhr - 16:00 Uhr
-    # - [ 2021-09-22, 18:30 Uhr - 20:30 Uhr ]
-    # - [ 2021-09-27, 18:30 Uhr - 20:30 Uhr ]
+    - [ 2021-09-22, 18:30 Uhr - 20:30 Uhr ]
+    - [ 2021-09-27, 18:30 Uhr - 20:30 Uhr ]
     - [ 2021-09-29, 18:30 Uhr - 20:30 Uhr ]
     - [ 2021-09-30, 18:30 Uhr - 20:30 Uhr ]
-    # - [ 2021-10-01, 18:30 Uhr - 20:30 Uhr ]
+    - [ 2021-10-01, 18:30 Uhr - 20:30 Uhr ]
 ---
 # Der Inhalt der E-Mail, die an neu angemeldete Mitglieder geschickt wird. Der
 # Wert von template sollte nicht verändert werden.
