--- a/docassemble/lmrhh/data/questions/deutschland-singt.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt.yml
@@ -75,7 +75,7 @@ data:
       help: 14:00 Uhr - 16:00 Uhr
     - [ 2021-09-22, 18:30 Uhr - 20:30 Uhr ]
     - [ 2021-09-27, 18:30 Uhr - 20:30 Uhr ]
-    - [ 2021-09-29, 18:30 Uhr - 20:30 Uhr ]
+    # - [ 2021-09-29, 18:30 Uhr - 20:30 Uhr ]
     - [ 2021-09-30, 18:30 Uhr - 20:30 Uhr ]
     - [ 2021-10-01, 18:30 Uhr - 20:30 Uhr ]
     - id: "2021-10-02-1"
