--- a/docassemble/lmrhh/data/questions/deutschland-singt.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt.yml
@@ -118,6 +118,7 @@ sections:
 # Funktion, die nicht leichtfertig verändert werden sollte.
 mandatory: True
 code: |
+  Anmeldefrist
   Kontaktdaten
   Termine
   Kontrolle
