--- a/docassemble/lmrhh/data/questions/drumday-templates.yml
+++ b/docassemble/lmrhh/data/questions/drumday-templates.yml
@@ -1,3 +1,10 @@
+attachment:
+  name: Anmeldung ${ person.name }
+  filename: Rechnung ${ person.name }
+  docx template file: Anmeldung Drum Day.docx
+  variable name: registration
+  valid formats: [pdf]
+---
 template: w1_description
 content: |
   In diesem Workshop wird dir gezeigt, auf was du am Anfang achten solltest,
@@ -15,11 +22,13 @@ content: |
   Du hast dein Drumset vom Keller in dein Zimmer getragen. Nun liegen die Teile
   da - aber wie weiter? Das Drumset ist zu klein und unbequem, weil du es mit 6
   Jahren bekommen hast und seither daran spielst? Etwas raschelt und klötert,
-  aber du weißt nicht, was?  
+  aber du weißt nicht, was? Die Felle sehen irgendwie komisch aus?  
   Da muss nicht sofort ein neues Instrument her! In diesem Workshop lernst du,
   wie du dein Drumset so aufbaust, dass du gut daran spielen kannst, angepasst
-  an deine persönlichen Körpermaße.   
-  Eigene Trommeln oder Fußmaschinen dürfen gerne mitgebracht werden.  
+  an deine persönlichen Körpermaße. Außerdem schauen wir uns an, wie die Felle
+  gewechselt werden und welches Fell für welche Trommel geeignet ist.  
+  Eigene Trommeln oder Fußmaschinen dürfen gerne mitgebracht werden, gerne auch
+  vorhandenes Werkzeug oder Stimmschlüssel dafür.  
   Eltern sind als passive Teilnehmer zum Zuschauen herzlich willkommen!
   
   **Dozentin**: Uli Ertle  
@@ -41,7 +50,7 @@ content: |
   vollgeschriebenem Notenpapier oder Overthinking gelähmt zu werden.
   
   **Dozent**: Markus Strothmann  
-  **Geeginet für**: Ab 10 Jahren, Spielerfahrung ca. 2-4 Jahre
+  **Geeginet für**: Ab 12 Jahren, Spielerfahrung ab 4 Jahre
 ---
 template: w4_description
 content: |
@@ -57,10 +66,23 @@ content: |
 ---
 template: w5_description
 content: |
-  Instrumentation von Akzenten am Drumset auf Basis von Clave-Pattern.
+  Bei diesem Workshop geht es um Sechzehntelakzente und wie Du sie auf dem
+  Schlagzeug verteilen kannst. Dazu lernst Du die rhythmischen Positionen der
+  einzelnen Akzente innerhalb des Taktes/Beats kennen. Du kennst sie schon? Dann
+  umso besser! Aus leichten Kombinationen von Akzenten kannst Du professionelle
+  Drumfills basteln. Cool sind sogenannte Clave-Rhythmen und gut geeignet für
+  diese Art zu trommeln. Vielleicht hast Du schon mal von der
+  „Right-Hand-Lead-Technik“ gehört. Diese Art die Fills zu trommeln ist quasi
+  die Keimzelle dieser Technik. Die dafür notwendigen Handsätze üben wir
+  zusammen. Du spielst schon ungefähr zwei Jahre Drumset. Du hast schon mal ein
+  „Single Paradiddle“ mit Deinem Lehrer/in geübt? Du kannst einen coolen
+  Bumbumzack-Groove? Dann kannst Du hier mitmachen. Du solltest ein Übungs-Pad
+  mit Ständer mitbringen. (Wer Eins hat). Dann können wir beim Spielen sprechen.
+  Sonst versteht man kein Wort… Wir spielen aber mindestens die halbe Zeit am
+  Drumset! Versprochen!
   
   **Dozent**: Claudio von Hassel  
-  **Geeignet für**: Ab 10 Jahren, Spielerfahrung ca. 2-4 Jahre
+  **Geeignet für**: Ab 10 Jahren, Spielerfahrung ab 2 Jahre
 ---
 template: w6_description
 content: |
@@ -75,27 +97,6 @@ content: |
   **Geeignet für**: Ab 10 Jahren, Vorkenntnisse erforderlich.
 ---
 template: w7_description
-content: |
-  Ob im Unterricht, im Studio oder auf der Bühne - elektrische Schlagzeuge
-  bieten vielfältige Möglichkeiten, die die Arbeit des Schlagzeugers
-  erleichtern. Nicht zuletzt weil der Schallpegel erhebliche gesenkt wird, auch
-  stehen nützliche Funktionen wie ein Metronom mit allen erdenklichen
-  Übemöglichkeiten zur Verfügung. Onboard Recording und Spielen zu verlangsamten
-  Playalongs ist mit den elektronischen GEWA Schlagzeugen genauso möglich wie
-  Mehrspur-Aufnahmen per DAW mit nur einem einzigen USB Kabel. Maximale
-  Flexibilität das Instrument auf die eigene Spielweise einzustellen ist immer
-  gegeben und das bei allerhöchster Klangqualität. 
-
-  Am Tag der offenen Tür der Jugendmusikschule Hamburg ist es möglich GEWA
-  E-Drums auszuprobieren. GEWA Produktmanager Oliver Schulte ist mit zwei GEWA
-  E-Drumsets vor Ort und erklärt die zahlreichen Funktionen der GEWA
-  Workstations G9 und G5. Also kommt vorbei und probiert diese tollen
-  Instrumente aus. Es gibt viel zu entdecken!
-  
-  **Dozentin**: Oli Schulte von der Firma GEWA  
-  **Geeignet für**: Alle, die mit dem Gedanken einer Anschaffung spielen
----
-template: w8_description
 content: |
   Wie kann ich verschiedene Sounds bei einem E-Drumset einstellen, eigene Sets
   programmieren und die richtige Lautstärke der einzelnen Instrumente
