--- a/docassemble/lmrhh/data/questions/drumday.yml
+++ b/docassemble/lmrhh/data/questions/drumday.yml
@@ -1,11 +1,11 @@
 metadata:
-  title: Anmeldung zum Drum Day 2022
-  tab title: Anmeldung Drum Day
-  short title: Drum Day
-  logo: '<img src="https://cdn.lmr-hh.de/logos/lmrhh-inverted.svg" height="27">'
+  title: Anmeldung zum Drum Day und Percussion Day 2022
+  tab title: Drum Day und Percussion Day
+  short title: Drum Day und Percussion Day
+  logo:
+    Drum Day und Percussion Day 2022
   description:
-    Dies ist die Anmeldung zum Drum Day, einer Veranstaltung der JMS und des
-    Landesmusikrates Hamburg.
+    Dies ist die Anmeldung zum Drum Day und Percussion Day 2022.
   exit url: https://www.lmr-hh.de
   revision_date: 2022-08-17
 ---
@@ -17,10 +17,8 @@ features:
   javascript: [actions.js]
 ---
 include:
+  - config.yml
   - drumday-templates.yml
----
-modules:
-  - .util
 ---
 objects:
   person: Individual
@@ -29,6 +27,9 @@ objects:
 # Testmodus
 code:
   testmodus = url_args.get('test', False) or True
+---
+code:
+  jms = url_args.get('jms', False)
 ---
 variable name: daten
 data:
@@ -40,169 +41,441 @@ data:
   Mailgun Vorlage: lmr-anmeldung
   E-Mail Benachrichtigung: []
 ---
-mandatory: true
-question: Drum Day + Percussion Day 2022
+question: Anmeldung zum Drum Day und Percussion Day 2022
 subquestion: |
-  Am 16.09. und 17.09. findet in einer Kooperation der staatlichen
-  Jugendmusikschule Hamburg und dem Landesmusikrat Hamburg der Drum Day sowie
-  der 3. Percussion Day 2022 statt.
+  Am 16.09. und 17.09. findet in einer Kooperation der Staatlichen
+  Jugendmusikschule Hamburg und dem Landesmusikrat Hamburg e.V. der _Drum Day_
+  sowie der _3. Percussion Day 2022_ statt im Miralles-Saal im Mittelweg 42.
   
-  Über dieses Formular können Sie sich zur Drum Clinic am 16.09. sowie zu den
-  Workshops am 17.09. anmelden. Beachten Sie, dass das Kontingent begrenzt ist
-  und Plätze nach dem First-Come First-Served Prinzip vergeben werden.
+  **Anmeldeschluss**: 15.09.2022
+fields:
+  - Vorname: person.name.first
+  - Nachname: person.name.last
+  - E-Mail: person.email
+    datatype: email
+  - Alter: person.age
+    datatype: number
+  - Ich bin Schlagzeug-Schüler\*in der JMS: person.jms
+    datatype: yesno
+    default: ${ jms }
+  - Vorkenntnisse: person.knowledge
+    input type: radio
+    choices:
+      - Ich bin kein\*e Drummer\*in
+      - Ich bin Anfänger\*in
+      - Ich bin Fortgeschrittene\*r
+---
+code: |
+  capacities = {
+    # passive, active, JMS
+    "w1": (20, 5, 5),
+    "w2": (10, 3, 3),
+    "w3": (10, 4, 4),
+    "w4": (20, 5, 5),
+    "w5": (4, 4, 4),
+    "w6": (4, 4, 4),
+    "w7": (20, 4, 4)
+  }
+---
+code: |
+  def get_space(time, workshop):
+    key = f"drumday-{time}-{workshop}"
+    participants = redis.hgetall(key)
+    capacity = capacities[workshop]
+    
+    def space(index, key):
+      return capacity[index] - int(participants.get(key, 0))
+  
+    space_active = space(1, b"active")
+    return (
+      space(0, b"passive"),
+      space_active,
+      space_active + space(2, b"jms")
+    )
+  
+  def get_space_large(name):
+    key = f"drumday-{name}"
+    participants = redis.hgetall(key)
+    
+    space_regular = 200 - int(participants.get("regular", 0))
+    space_jms = 100 - int(participants.get("jms", 0))
+    return (
+      space_regular,
+      space_jms + space_regular
+    )
+---
+def: space_def
+mako: |
+  <%def name="warn_full(time, workshop)">
+  <% space_passive, space_active, space_jms = get_space(time, workshop) %>
+  % if not space_jms or (not person.jms and not space_active):
+    % if space_passive:
+  <div class="alert alert-warning">
+    Die aktiven Plätze dieses Workshops sind bereits vergeben. Es sind nur noch
+    passive Plätze verfügbar.
+  </div>
+    % else:
+  <div class="alert alert-danger">
+    Dieser Workshop ist bereits voll. Bitte wähle einen anderen Workshop.
+  </div>
+    % endif
+  % elif not space_passive:
+  <div class="alert alert-warning">
+    Für diesen Workshop sind keine passiven Plätze mehr frei. Du kannst dich
+    allerdings als aktive\*r Teilnehmende\*r anmelden.
+  </div>
+  % endif
+  </%def>
+  
+  <%def name="warn_full_large(name, text)">
+  <% space_regular, space_jms = get_space_large(name) %>
+  % if not space_jms or (not person.jms and not space_regular):
+  <div class="alert alert-warning">
+    Es sind leider schon alle Plätze für ${ name } vergeben.
+  </div>
+  % endif
+  </div>
+  </%def>
+---
+mandatory: true
+question: Anmeldung zum Drum Day und Percussion Day 2022
+pre: |
+  % if defined('workshop_error'):
+  <div class="alert alert-danger">
+    Deine Auswahl für ${ workshop_error } kann leider nicht erfüllt werden.
+    Bitte triff eine andere Auswahl.
+  </div>
+  % endif
+subquestion: |
+  Über dieses Formular meldest du dich zur Drum Clinic am 16.09. sowie zu den
+  Workshops am 17.09. an. Beachte, dass das Kontingent begrenzt ist und Plätze
+  nach dem First-Come, First-Served Prinzip vergeben werden.
+usedefs: space_def
 fields:
   - note: |
-      ## Drum Clinic am 16.09.
+      ## Anmeldung zum Drum Day am 16.09.
       
-      Die Drum Clinic geht von etwa 16:00 Uhr bis 18:00 Uhr und wird von Benny
-      Greb und Jost Nickel durchgeführt. **Bitte bringen Sie Sticks & Pad mit**,
-      wenn Sie an der Drum Clinic teilnehmen möchten.
+      ### Drum Clinic
       
-      Anschließend wird um 18:30 Uhr eine Eröffnungsveranstaltung mit Wort-
-      und Musikbeiträgen stattfinden.
+      ${ warn_full_large("drum-clinic", "die Drum Clinic") }
+      
+      Zum Drum Day am 16.09. werden **Benny Greb** und **Jost Nickel** in jeweils
+      etwa 60 Minuten die _Drum Clinic_ durchführen. Die Veranstaltung geht von
+      etwa 16:00 Uhr bis etwa 18:00 Uhr. Wenn du an der Drum Clinic aktiv
+      teilnehmen möchtest, bringe bitte **Sticks & Practice Pads** mit.
+      
+      [Mehr zum Instrument des Jahres und zu den Vortragenden](https://www.lmr-hh.de/project/instrument-des-jahres-drumset/)
   - Anmelden zur Drum Clinic mit Benny Greb und Jost Nickel: drum_clinic
     datatype: yesnoradio
   - note: |
-      ## Percussion Day
+      ### Konzert
+      
+      ${ warn_full_large("opening-concert", "das Konzert") }
+      
+      Ab 19:00 Uhr findet am 16.09. ein Konzert statt. Es werden Benny Greb und
+      Jost Nickel zusammen mit dem Beatboxer Guido zu erleben sein. Das Konzert
+      wird begleitet von einigen Redebeiträgen.
+  - Anmelden zum Konzert: opening_concert
+    datatype: yesnoradio
+  - note: |
+      ---
+      
+      ## Anmeldung zum Percussion Day am 17.09.
       
       Der Percussion Day findet mit folgendem zeitlichen Ablauf statt:
       
       - 11:00: Eröffnung im Miralles-Saal
-      - 11:15 - 12:00: Workshop 1
-      - 12:15 - 13:00: Workshop 2
-      - 13:15 - 14:00: Workshop 3
+      - 11:15 - 12:00: Workshop-Block 1
+      - 12:15 - 13:00: Workshop-Block 2
+      - 13:15 - 14:00: Workshop-Block 3
       - 14:30: Abschlusskonzert
-      - 16:00: Netzwerktreffen des Percussion Creativ e.V.
       
-      Sie können sich für jede der drei Workshop-Zeiten zu einem anderen
-      Workshop anmelden. Die meisten Workshops finden mehrfach statt.
+      Es finden unterschiedliche Workshops statt, die in den drei Zeitblöcken
+      zum Teil wiederholt werden. Du kannst dich für jeden der drei
+      Workshop-Blöcke zu einem anderen Workshop anmelden.
       
-      Es ist auch möglich an einem Workshop passiv teilzunehmen. Als passive\*r
-      Teilnehmende\*r können Sie den Workshop besuchen, können aber selbst nicht
-      aktiv mitspielen.
-  - Workshop 1: workshop_1
+      Es ist auch möglich, an einem Workshop passiv teilzunehmen. Als passive\*r
+      Teilnehmende\*r kannst du den Workshop besuchen und zuhören, kannst aber
+      selbst nicht aktiv mitspielen.
+      
+      Die Workshops sind durch bestimmte Kapazitäten beschränkt (z.B. die
+      Raumgröße). Die Plätze werden nach dem First-Come, First-Served Prinzip
+      vergeben. Ist ein Workshop voll, kannst du denselben Workshop evtl. in
+      einem anderen Block wählen, kannst passiv teilnehmen oder einen anderen
+      Workshop stattdessen besuchen.
+  - '<span style="font-size:1.4em">Workshop-Block 1</span>': workshop1
     choices:
-      code: |
-        workshops + [
-          {"w8": "E-Drums im Unterricht und Zuhause"}
-        ]
+      code: workshops
     default: None
+  - Ich möchte nur passiv teilnehmen: workshop1_active
+    datatype: noyes
+    disable if:
+      variable: workshop1
+      is: null
   - show if:
-      variable: workshop_1
+      variable: workshop1
       is: w1
-    note: ${ w1_description }
+    note: |
+      ${ warn_full(1, "w1") }
+      ${ w1_description }
   - show if:
-      variable: workshop_1
+      variable: workshop1
       is: w2
-    note: ${ w2_description }
+    note: |
+      ${ warn_full(1, "w2") }
+      ${ w2_description }
   - show if:
-      variable: workshop_1
+      variable: workshop1
       is: w3
-    note: ${ w3_description }
+    note: |
+      ${ warn_full(1, "w3") }
+      ${ w3_description }
   - show if:
-      variable: workshop_1
-      is: w3
-    note: ${ w3_description }
-  - show if:
-      variable: workshop_1
+      variable: workshop1
       is: w4
-    note: ${ w4_description }
+    note: |
+      ${ warn_full(1, "w4") }
+      ${ w4_description }
   - show if:
-      variable: workshop_1
+      variable: workshop1
       is: w5
-    note: ${ w5_description }
+    note: |
+      ${ warn_full(1, "w5") }
+      ${ w5_description }
   - show if:
-      variable: workshop_1
+      variable: workshop1
       is: w6
-    note: ${ w6_description }
+    note: |
+      ${ warn_full(1, "w6") }
+      ${ w6_description }
   - show if:
-      variable: workshop_1
+      variable: workshop1
       is: w7
-    note: ${ w7_description }
-  - show if:
-      variable: workshop_1
-      is: w8
-    note: ${ w8_description }
-  - Workshop 2: workshop_2
+    note: |
+      ${ warn_full(1, "w7") }
+      ${ w7_description }
+  - '<span style="font-size:1.4em">Workshop-Block 2</span>': workshop2
     choices:
-      code: workshops
+      code: reduced_workshops
+    default: None
+  - Ich möchte nur passiv teilnehmen: workshop2_active
+    datatype: noyes
+    disable if:
+      variable: workshop2
+      is: null
   - show if:
-      variable: workshop_2
+      variable: workshop2
       is: w1
-    note: ${ w1_description }
+    note: |
+      ${ warn_full(2, "w1") }
+      ${ w1_description }
   - show if:
-      variable: workshop_2
+      variable: workshop2
       is: w2
-    note: ${ w2_description }
+    note: |
+      ${ warn_full(2, "w2") }
+      ${ w2_description }
   - show if:
-      variable: workshop_2
+      variable: workshop2
       is: w3
-    note: ${ w3_description }
+    note: |
+      ${ warn_full(2, "w3") }
+      ${ w3_description }
   - show if:
-      variable: workshop_2
-      is: w3
-    note: ${ w3_description }
-  - show if:
-      variable: workshop_2
+      variable: workshop2
       is: w4
-    note: ${ w4_description }
+    note: |
+      ${ warn_full(2, "w4") }
+      ${ w4_description }
   - show if:
-      variable: workshop_2
+      variable: workshop2
       is: w5
-    note: ${ w5_description }
+    note: |
+      ${ warn_full(2, "w5") }
+      ${ w5_description }
   - show if:
-      variable: workshop_2
+      variable: workshop2
       is: w6
-    note: ${ w6_description }
-  - show if:
-      variable: workshop_2
-      is: w7
-    note: ${ w7_description }
-  - Workshop 3: workshop_3
+    note: |
+      ${ warn_full(2, "w6") }
+      ${ w6_description }
+  - '<span style="font-size:1.4em">Workshop-Block 3</span>': workshop3
     choices:
-      code: workshops
+      code: reduced_workshops
+    default: None
+  - Ich möchte nur passiv teilnehmen: workshop3_active
+    datatype: noyes
+    disable if:
+      variable: workshop3
+      is: null
   - show if:
-      variable: workshop_3
+      variable: workshop3
       is: w1
-    note: ${ w1_description }
+    note: |
+      ${ warn_full(3, "w1") }
+      ${ w1_description }
   - show if:
-      variable: workshop_3
+      variable: workshop3
       is: w2
-    note: ${ w2_description }
+    note: |
+      ${ warn_full(3, "w2") }
+      ${ w2_description }
   - show if:
-      variable: workshop_3
+      variable: workshop3
       is: w3
-    note: ${ w3_description }
+    note: |
+      ${ warn_full(3, "w3") }
+      ${ w3_description }
   - show if:
-      variable: workshop_3
-      is: w3
-    note: ${ w3_description }
-  - show if:
-      variable: workshop_3
+      variable: workshop3
       is: w4
-    note: ${ w4_description }
+    note: |
+      ${ warn_full(3, "w4") }
+      ${ w4_description }
   - show if:
-      variable: workshop_3
+      variable: workshop3
       is: w5
-    note: ${ w5_description }
+    note: |
+      ${ warn_full(3, "w5") }
+      ${ w5_description }
   - show if:
-      variable: workshop_3
+      variable: workshop3
       is: w6
-    note: ${ w6_description }
-  - show if:
-      variable: workshop_3
-      is: w7
-    note: ${ w7_description }
+    note: |
+      ${ warn_full(3, "w6") }
+      ${ w6_description }
+  - note: |
+      ### Abschlusskonzert
+      
+      ${ warn_full_large("closing-concert", "das Abschlusskonzert") }
+  - Ich möchte das Abschlusskonzert besuchen: closing_concert
+    datatype: yesnoradio
+    default: False
 continue button label: Abschicken
+validation code: |
+  if workshop2 and workshop1 == workshop2:
+    validation_error("Du kannst einen Workshop nicht mehrfach belegen.", field="workshop2")
+  if workshop3 and (workshop1 == workshop3 or workshop2 == workshop3):
+    validation_error("Du kannst einen Workshop nicht mehrfach belegen.", field="workshop3")
 ---
 code: |
-  workshops = [
-    {None: "Keine Auswahl"},
+  reduced_workshops = [
+    {None: "Ich möchte keinen Workshop in diesem Block besuchen"},
     {"w1": "Das Drumset – der perfekte Einstieg"},
     {"w2": "Drumset aufbauen - aber wie?"},
     {"w3": "Freies Spiel am Drumset"},
     {"w4": "Fitte Hände in allen Lebenslagen - schnelle Übungen für Zeit-Jongleure und Technikmuffel"},
-    {"w5": "Abwechslung im Spiel - Akzente am Drumset"},
-    {"w6": "Latin for drummers"},
-    {"w7": "E-Sets Beratung"}
+    {"w5": "Abwechslung im Spiel - moderne Tom-Fills"},
+    {"w6": "Latin for drummers"}
   ]
+  workshops = dict(reduced_workshops)
+  workshops["w7"] = "E-Drums im Unterricht und Zuhause"
+---
+mandatory: true
+need:
+  - workshop1
+  - workshop1_active,
+  - workshop2
+  - workshop2_active,
+  - workshop3
+  - workshop3_active
+  - get_space
+code: |
+  with redis.lock("drumday-lock", timeout=5):
+    space_regular, space_jms = get_space_large("drum-clinic")
+    if not space_jms or (nor person.jms and not space_regular):
+      define("workshop_error", "Drum Clinic")
+      invalidate("drum_clinic")
+      re_run_logic()
+  
+    space_regular, space_jms = get_space_large("opening-concert")
+    if not space_jms or (nor person.jms and not space_regular):
+      define("workshop_error", "Konzert")
+      invalidate("opening_concert")
+      re_run_logic()
+  
+    space_regular, space_jms = get_space_large("closing-concert")
+    if not space_jms or (nor person.jms and not space_regular):
+      define("workshop_error", "Abschlusskonzert")
+      invalidate("closing_concert")
+      re_run_logic()
+  
+    keys = [None, None, None]
+    for time in range(1, 4):
+      workshop = value(f"workshop{time}")
+      if workshop is None:
+        continue
+      is_active = value(f"workshop{time}_active")
+      space_passive, space_active, space_jms = get_space(time, workshop)
+  
+      if not is_active:
+        space = space_passive
+        key = "passive"
+      elif person.jms:
+        space = space_jms
+        key = "jms"
+      else:
+        space = space_active
+        key = "active"
+  
+      if not space:
+        define("workshop_error", f"Workshop {time}")
+        invalidate(f"workshop{time}")
+        re_run_logic()
+      keys[time-1] = key
+  
+    if drum_clinic:
+      redis.hincrby("drumday-drum-clinic", "jms" if person.jms else "regular", 1)
+    if opening_concert:
+      redis.hincrby("drumday-opening-concert", "jms" if person.jms else "regular", 1)
+    if closing_concert:
+      redis.hincrby("drumday-closing_concert", "jms" if person.jms else "regular", 1)
+    for time, key in enumerate(keys, 1):
+      if key:
+        workshop = value(f"workshop{time}")
+        redis.hincrby(f"drumday-{time}-{workshop}", key, 1)
+  del keys
+---
+need: registration
+code: |
+  data = {
+    "Vorname": person.name.first,
+    "Nachname": person.name.last,
+    "E-Mail": person.email,
+    "JMS-Schüler": person.jms,
+    "Alter": person.age,
+    "Vorkenntnisse": person.knowledge,
+    "Drum Clinic": drum_clinic,
+    "Konzert": opening_concert,
+    "Workshop 1": workshops[workshop1],
+    "Workshop 2": workshops[workshop2],
+    "Workshop 3": workshops[workshop3],
+    "Abschlusskonzert": closing_concert,
+    "Anmeldedatum": current_datetime(timezone="Europe/Berlin").format_datetime('d.M.YYYY HH:mm')
+  }
+  add_spreadsheet_row(
+      daten["Anmeldungen"]["Tabelle"],
+      daten["Anmeldungen"]["Bereich"],
+      data
+    )
+  del data
+  Automation = True
+---
+mandatory: true
+need:
+  - Automation
+question: Ihre Anmeldung
+subquestion: |
+  Vielen Dank für deine Anmeldung zum Drum Day und zum Percussion Day 2022.
+  
+  Du kannst deine Anmeldung hier direkt herunterladen. Die Anmeldung wird dir
+  außerdem als Kopie per E-Mail zugeschickt.
+  
+  [Anmeldung herunterladen](${ registration.pdf.url_for() })
+  
+  Bitte bringe die Anmeldung zum Drum Day und zum Percussion Day mit, da du sie
+  am Eingang vorzeigen musst.
+  
+  Wir freuen uns auf Sie.
+buttons:
+  - Beenden: exit
