--- a/docassemble/lmrhh/data/questions/drumday-templates.yml
+++ b/docassemble/lmrhh/data/questions/drumday-templates.yml
@@ -80,7 +80,7 @@ content: |
   Trab bringen wollen.
   
   **Dozent**: Tammo Zimmermann  
-  **Geeginet für**: Alter: ab 9 Jahren, Anfänger und Fortgeschrittene, benötigt
+  **Geeginet für**: Ab 9 Jahren, Anfänger und Fortgeschrittene, benötigt
   werden eigenes Übepad und Sticks
 ---
 template: w5_description
@@ -108,7 +108,7 @@ content: |
   Dieser Workshop zeigt Dir die Welt der Percussion Instrumente. Was ist die
   Standardausrüstung eines Percussionisten. Handtrommeln (Conga´s, Bongo´s),
   Schüttel- und Stickinstrumente (Timbales, Guiro, Clave, Maracas  etc. ….:-).  
-  Wie begleite ich ein Latin Stück auf dem drum Set zusammen mit mehreren
+  Wie begleite ich ein Latin Stück auf dem Drumset zusammen mit mehreren
   Percussionisten. Folgende Latin Grooves wollen wir spielen: El Cha Cha Cha,
   Mambo
   
