--- a/docassemble/lmrhh/data/questions/drumday.yml
+++ b/docassemble/lmrhh/data/questions/drumday.yml
@@ -173,7 +173,7 @@ fields:
       etwa 16:00 Uhr bis etwa 18:00 Uhr. Wenn du an der Drum Clinic aktiv
       teilnehmen möchtest, bringe bitte **Sticks & Practice Pads** mit.
       
-      [Mehr zum Instrument des Jahres und zu den Vortragenden](https://www.lmr-hh.de/project/instrument-des-jahres-drumset/)
+      [Mehr zum Instrument des Jahres und zu den Vortragenden](https://www.lmr-hh.de/drumday)
       
       ${ warn_full_large("drum-clinic", "die Drum Clinic") }
   - Anmelden zur Drum Clinic mit Benny Greb und Jost Nickel: drum_clinic
